--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ button {
     cursor: pointer;
     border: none;
     outline: none;
-    color: #e1f3ff;
+    color: #fff;
     background-color: #31708e;
     font-weight: 700;
     font-size: 16px;
@@ -61,21 +61,24 @@ button {
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 4px solid #31708e;
+    gap: 8px;
+    
 
 }
 
 .buttons {
     display: flex;
     flex-direction: column;
-   
-    justify-content: space-evenly;
+    height: 100%;
+    justify-content: center;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .grid{
     width: 500px;
     height: 500px;
     display: grid;
-    border-left: 4px solid #31708e;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    
 }
 
