--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* Reset default styles and apply font-family globally */
 * {
     margin: 0;
     padding: 0;
@@ -6,7 +5,6 @@
     font-family: 'Roboto', sans-serif;
 }
 
-/* Body styles */
 body {
     height: 100vh;
     background-color: #f7f9fb;
@@ -14,7 +12,6 @@ body {
     flex-direction: column;
 }
 
-/* Header and Footer styles */
 header,
 footer {
     display: flex;
@@ -32,14 +29,14 @@ footer {
     justify-content: center;
 }
 
-/* Button styles */
+
 button {
     cursor: pointer;
     border: none;
     outline: none;
     color: #fff;
-    background-color: #31708e;
-    font-weight: 700;
+    background-color: #303030;
+    font-weight: 500;
     font-size: 16px;
     padding: 8px;
     margin: 8px;
@@ -47,13 +44,15 @@ button {
     transition: all 0.2s ease-in-out;
 }
 
-/* Title styles */
+button:hover {
+    background-color: #404040;
+}
+
 .title {
     font-weight: 700;
     font-size: 24px;
 }
 
-/* Frame styles */
 .frame {
     display: flex;
     flex: 1;
@@ -63,7 +62,6 @@ button {
     margin: 16px;
 }
 
-/* Content styles */
 .content {
     display: flex;
     align-items: center;
@@ -71,7 +69,6 @@ button {
     gap: 8px;
 }
 
-/* Buttons container styles */
 .buttons {
     display: flex;
     flex-direction: column;
@@ -80,7 +77,6 @@ button {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
-/* Grid styles */
 .grid {
     width: 500px;
     height: 500px;
