--- a/style.css
+++ b/style.css
@@ -69,13 +69,18 @@ button:hover {
     gap: 8px;
 }
 
-.buttons {
+.sidebar {
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
     height: 100%;
-    justify-content: center;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     background-color: #fbfbfb;
+}
+
+.sidebar > * {
+    display: flex;
+    flex-direction: column;
 }
 
 .grid {
@@ -83,4 +88,18 @@ button:hover {
     height: 500px;
     display: grid;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.dialog {
+    width: 20rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 0.5rem;
+
+}
+
+.dialog::backdrop {
+    background-color: rgba(0, 0, 0, 0.5);
 }
