--- a/style.css
+++ b/style.css
@@ -97,9 +97,17 @@ button:hover {
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 0.5rem;
-
+    padding: 1rem;
 }
 
 .dialog::backdrop {
     background-color: rgba(0, 0, 0, 0.5);
+}
+
+.dialog-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
 }
